--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
         "axios": "^0.18",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
+        "html-webpack-plugin": "^3.2.0",
         "jquery": "^3.2",
         "laravel-mix": "^2.1.14",
-        "lodash": "^4.17.4",
+        "lodash": "^4.17.11",
         "popper.js": "^1.12",
+        "prerender-spa-plugin": "^3.4.0",
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "mdbootstrap": "^4.5.9",
+        "mdbootstrap": "^4.5.10",
+        "mime": "^2.3.1",
+        "path": "^0.12.7",
         "vue-axios": "^2.1.3",
         "vue-router": "^3.0.1"
     }
